@@ -52,6 +52,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-278 When outputSchema doesn't match table schema wrong columns are returned to the user (gates)
+
   HCAT-276 After merging in HCATALOG-237 related changes Pig scripts with more than one store fail (daijy via gates)
 
   HCAT-257 e2e harness not working properly after file location change (gates)
